syntax = "proto3";

option java_package = "ch.hsr.dsl";

service KadProtocol {
   rpc getPeers(Empty) returns (PeerList);
   rpc checkPeer(BucketRequest) returns (Response);

   rpc checkBucket8(PeerList) returns (Response);
}

message PeerList {
  repeated Peer peers = 1;
  int64 seed = 2;
}

message Peer {
  int32 peerId = 1;
  string ipPort = 2;
}

message BucketRequest {
  Peer self = 1;
  Peer peer = 2;
  int32 bucket = 3;
}

message Response {
  bool success=1;
}

message Empty {}